--- a/locales/zh.json
+++ b/locales/zh.json
@@ -60,6 +60,11 @@
     "unrated": "未评级",
     "unnamedCigar": "未命名雪茄"
   },
+  "translation": {
+    "machineTranslated": "机器翻译",
+    "viewOriginal": "查看原文",
+    "viewTranslation": "查看译文"
+  },
   "seo": {
     "description": "Pistacho 雪茄评分社区汇聚全球爱好者，以真实评分、专业点评与认证体系，发掘值得珍藏的每一支雪茄，并欢迎每位用户参与评分分享。",
     "keywords": "Pistacho, 雪茄评分, 雪茄社区, 雪茄认证, 雪茄点评",
