Improve SEO summary for cigar results

--- a/locales/en.json
+++ b/locales/en.json
@@ -266,6 +266,7 @@
     "meta": {
       "titleTemplate": "Cigar Review: {{name}}",
       "descriptionTemplate": "Overall impression: {{name}} from {{origin}} (size: {{size}}) earned {{grade}} ({{score}}). Reviewed by {{reviewer}}.",
+      "searchSnippet": "Score {{score}} · Overall {{grade}}",
       "scoreFallback": "N/A"
     },
     "narrative": {
