--- a/locales/es.json
+++ b/locales/es.json
@@ -95,7 +95,7 @@
     "loadFailed": "Error al cargar reseñas: {{msg}}",
     "noMatches": "No se encontraron reseñas coincidentes.",
     "uncertify": "Quitar Certif.",
-    "smokingWarning": "Fumar y el consumo excesivo de alcohol son perjudiciales para la salud. Este sitio contiene contenido de tabaco y alcohol; los menores deben abstenerse."
+    "smokingWarning": "Fumar y el consumo excesivo de alcohol son perjudiciales para la salud. Este sitio es solo para usuarios que hayan alcanzado la edad legal en su región; quienes no cumplan deben abstenerse."
   },
   "ratePage": {
     "title": "Publicar Reseña de Puro",
