Add Instagram admin console and sharing API

--- a/locales/es.json
+++ b/locales/es.json
@@ -567,10 +567,38 @@
          "mustHave": "Imprescindible"
       }
    },
+   "instagramAdmin": {
+      "pageTitle": "Consola de publicación en Instagram",
+      "loading": "Cargando...",
+      "loginRequiredTitle": "Inicio de sesión requerido",
+      "loginRequired": "Inicia sesión y asegúrate de ser Super Admin para usar la consola de Instagram.",
+      "superAdmin": "Solo Super Admin",
+      "title": "Compartir reseñas en Instagram",
+      "configTitle": "Credenciales de API y Webhook",
+      "configSubtitle": "Guarda el token de Instagram Graph API, App ID/Secret y el token de verificación del webhook.",
+      "businessAccountId": "ID de cuenta empresarial de Instagram",
+      "instagramUserId": "ID de usuario de Instagram",
+      "accessToken": "Token de acceso de larga duración",
+      "appId": "ID de la app",
+      "appSecret": "Secreto de la app",
+      "webhookUrl": "URL de callback del webhook",
+      "webhookVerify": "Token de verificación del webhook",
+      "configHint": "Solo los Super Admin pueden ver estas credenciales. Si falla la publicación, revisa si el token expiró.",
+      "saveSettings": "Guardar configuración",
+      "saved": "Configuración guardada",
+      "selectTitle": "Elige una reseña para compartir",
+      "selectSubtitle": "Selecciona una reseña, edita el texto y envíala a la cola de Instagram.",
+      "reload": "Actualizar lista",
+      "noRatings": "No hay reseñas disponibles todavía.",
+      "captionPlaceholder": "Agrega texto, hashtags y detalles de la reseña...",
+      "shareBtn": "Enviar a Instagram",
+      "shareQueued": "Añadido a la cola de publicación de Instagram",
+      "gradeLabel": "Calificación"
+   },
    "flavors": {
-      "coffee": "Café",
-      "chocolate": "Chocolate",
-      "cedar": "Cedro",
+        "coffee": "Café",
+        "chocolate": "Chocolate",
+        "cedar": "Cedro",
       "earth": "Tierra",
       "hay": "Heno",
       "leather": "Cuero",
