Add Instagram publishing console for super admins

--- a/locales/es.json
+++ b/locales/es.json
@@ -83,8 +83,41 @@
     "login": "Iniciar Sesión/Registrarse",
     "logout": "Cerrar Sesión",
     "configAdmin": "Config. de Calificación",
+    "instagramConsole": "Consola de Instagram",
     "userAdmin": "Admin. de Usuarios",
     "loggedIn": "Sesión iniciada"
+  },
+  "instagramConsolePage": {
+    "title": "Consola de publicación en Instagram",
+    "description": "Los super administradores pueden elegir cualquier comentario, aplicar la plantilla y publicar directo en Instagram.",
+    "ratingLoaderTitle": "Elige la reseña que quieres publicar",
+    "ratingIdLabel": "ID de reseña",
+    "loadRating": "Cargar reseña y comentarios",
+    "ratingMeta": "Información de la reseña",
+    "commentsTitle": "Selecciona el comentario a publicar",
+    "noComments": "Sin comentarios todavía. Prueba con otra reseña.",
+    "publishSectionTitle": "Publicar en Instagram",
+    "imageOverrideLabel": "URL de imagen (opcional, usa la primera imagen de la reseña por defecto)",
+    "publishButton": "Publicar",
+    "publishing": "Publicando...",
+    "templateTitle": "Plantilla de publicación",
+    "templateDescription": "Marcadores disponibles: {{title}}, {{cigarName}}, {{cigarOrigin}}, {{cigarSize}}, {{score}}, {{grade}}, {{comment}}, {{commentAuthor}}, {{resultsUrl}}, {{imageUrl}}.",
+    "templatePlaceholder": "Escribe aquí la plantilla del pie de foto...",
+    "templateSaved": "Plantilla guardada.",
+    "templateSaveFailed": "No se pudo guardar la plantilla: {{msg}}",
+    "templateLoadFailed": "No se pudo cargar la plantilla: {{msg}}",
+    "ratingLoadFailed": "No se pudo cargar la reseña o los comentarios: {{msg}}",
+    "commentPreview": "Vista previa de publicación",
+    "noSelection": "Carga una reseña y elige un comentario para ver la vista previa.",
+    "publishSuccess": "Publicación enviada a Instagram.",
+    "publishFailed": "La publicación falló: {{msg}}",
+    "webhookTitle": "Configuración del webhook de Instagram",
+    "webhookSteps": [
+      "En Webhooks de Meta selecciona Instagram, usa la URL https://<tu-dominio>/api/instagram/webhook y el token INSTAGRAM_WEBHOOK_VERIFY_TOKEN.",
+      "Suscríbete a los campos comments, mentions, messages y story_insights para recibir notificaciones.",
+      "Responde a la verificación GET devolviendo hub.challenge y responde 200 a los eventos POST.",
+      "Configura INSTAGRAM_ACCESS_TOKEN, INSTAGRAM_ACCOUNT_ID e INSTAGRAM_WEBHOOK_VERIFY_TOKEN en tu entorno o en Cloudflare."
+    ]
   },
   "indexPage": {
     "searchPlaceholder": "Buscar nombre, origen, tamaño, reseña, usuario...",
