--- a/locales/zh.json
+++ b/locales/zh.json
@@ -78,8 +78,41 @@
     "login": "登录/注册",
     "logout": "退出",
     "configAdmin": "评分配置",
+    "instagramConsole": "Instagram 发布",
     "userAdmin": "用户管理",
     "loggedIn": "已登录"
+  },
+  "instagramConsolePage": {
+    "title": "Instagram 发布控制台",
+    "description": "超级管理员可以在此挑选评论、应用模板，并直接发布到 Instagram。",
+    "ratingLoaderTitle": "选择要发布的点评",
+    "ratingIdLabel": "点评 ID",
+    "loadRating": "加载点评与评论",
+    "ratingMeta": "点评信息",
+    "commentsTitle": "选择要发布的评论",
+    "noComments": "暂无评论，先换一个点评试试。",
+    "publishSectionTitle": "发布到 Instagram",
+    "imageOverrideLabel": "图片地址（可选，默认使用点评首图）",
+    "publishButton": "发布",
+    "publishing": "发布中...",
+    "templateTitle": "发布模板",
+    "templateDescription": "可用占位符：{{title}}（标题）、{{cigarName}}（名称）、{{cigarOrigin}}（产地）、{{cigarSize}}（尺寸）、{{score}}（得分）、{{grade}}（等级）、{{comment}}（评论内容）、{{commentAuthor}}（评论用户）、{{resultsUrl}}（详情链接）、{{imageUrl}}（首图）。",
+    "templatePlaceholder": "在此输入发布模板...",
+    "templateSaved": "模板已保存。",
+    "templateSaveFailed": "模板保存失败：{{msg}}",
+    "templateLoadFailed": "加载模板失败：{{msg}}",
+    "ratingLoadFailed": "无法加载点评或评论：{{msg}}",
+    "commentPreview": "发布预览",
+    "noSelection": "请先加载点评并选择评论。",
+    "publishSuccess": "发布成功，内容已提交至 Instagram。",
+    "publishFailed": "发布失败：{{msg}}",
+    "webhookTitle": "Instagram Webhook 配置",
+    "webhookSteps": [
+      "在 Meta 开发者后台的 Webhooks 产品中选择 Instagram，回调 URL 填写 https://<你的域名>/api/instagram/webhook，验证令牌使用环境变量 INSTAGRAM_WEBHOOK_VERIFY_TOKEN。",
+      "在订阅字段中勾选 comments、mentions、messages、story_insights，以便接收发布和互动通知。",
+      "确保你的服务器能对 GET 验证请求返回 hub.challenge，并对 POST 事件返回 200。",
+      "在 .env 或 Cloudflare 环境变量中同时配置 INSTAGRAM_ACCESS_TOKEN、INSTAGRAM_ACCOUNT_ID、INSTAGRAM_WEBHOOK_VERIFY_TOKEN。"
+    ]
   },
   "indexPage": {
     "searchPlaceholder": "搜索雪茄名称, 产地, 尺寸, 点评, 用户...",
